Move compass to top right; increase compass z-index to ensure visibility above other elements.

--- a/source/client/ui/styles.scss
+++ b/source/client/ui/styles.scss
@@ -93,11 +93,11 @@
     font-family: "Hind Siliguri", sans-serif;
     font-size: 1.15em;
   }
-  
+
   figure.align-left {
     float: left;
   }
-  
+
   figure.align-right {
     float: right;
   }
@@ -105,7 +105,7 @@
   figure.align-center {
     text-align: center;
   }
-  
+
   figure.image figcaption {
     color: #999;
     display: block;
@@ -199,11 +199,11 @@
 
 .sv-compass {
   position: absolute;
-  bottom: 20px;
-  left: 50px;
+  top: 20px;
+  right: 50px;
   pointer-events: auto;
   user-select: none;
-  z-index: 100;
+  z-index: 1000;
 }
 
 .sv-compass-container {
@@ -212,11 +212,8 @@
   justify-content: center;
   filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.2));
   cursor: grab;
-  
+
   svg {
     display: block;
   }
 }
-
-
-
